--- a/server/package.json
+++ b/server/package.json
@@ -45,7 +45,10 @@
     "@feathersjs/transport-commons": "^4.5.9",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
+    "feathers-nedb": "^5.1.0",
     "helmet": "^4.1.1",
+    "lodash": "^4.17.20",
+    "nedb": "^1.8.0",
     "serve-favicon": "^2.5.0",
     "winston": "^3.3.3"
   },
